tests/ui/feature-gates/issue-43106-gating-of-stable.stderr
error[E0658]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:7:1
   |
LL | #![stable()]
   | ^^^^^^^^^^^^
   |
   = help: add `#![feature(staged_api)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0546]: missing 'feature'
  --> $DIR/issue-43106-gating-of-stable.rs:7:1
   |
LL | #![stable()]
   | ^^^^^^^^^^^^

error[E0542]: missing 'since'
  --> $DIR/issue-43106-gating-of-stable.rs:7:1
   |
LL | #![stable()]
   | ^^^^^^^^^^^^

error[E0658]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:12:1
   |
LL | #[stable()]
   | ^^^^^^^^^^^
   |
   = help: add `#![feature(staged_api)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0546]: missing 'feature'
  --> $DIR/issue-43106-gating-of-stable.rs:12:1
   |
LL | #[stable()]
   | ^^^^^^^^^^^

error[E0542]: missing 'since'
  --> $DIR/issue-43106-gating-of-stable.rs:12:1
   |
LL | #[stable()]
   | ^^^^^^^^^^^

error[E0658]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:18:9
   |
LL |         #![stable()]
   |         ^^^^^^^^^^^^
   |
   = help: add `#![feature(staged_api)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0546]: missing 'feature'
  --> $DIR/issue-43106-gating-of-stable.rs:18:9
   |
LL |         #![stable()]
   |         ^^^^^^^^^^^^

error[E0542]: missing 'since'
  --> $DIR/issue-43106-gating-of-stable.rs:18:9
   |
LL |         #![stable()]
   |         ^^^^^^^^^^^^

error[E0658]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:24:5
   |
LL |     #[stable()]
   |     ^^^^^^^^^^^
   |
   = help: add `#![feature(staged_api)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0546]: missing 'feature'
  --> $DIR/issue-43106-gating-of-stable.rs:24:5
   |
LL |     #[stable()]
   |     ^^^^^^^^^^^

error[E0542]: missing 'since'
  --> $DIR/issue-43106-gating-of-stable.rs:24:5
   |
LL |     #[stable()]
   |     ^^^^^^^^^^^

error[E0658]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:30:5
   |
LL |     #[stable()]
   |     ^^^^^^^^^^^
   |
   = help: add `#![feature(staged_api)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0546]: missing 'feature'
  --> $DIR/issue-43106-gating-of-stable.rs:30:5
   |
LL |     #[stable()]
   |     ^^^^^^^^^^^

error[E0542]: missing 'since'
  --> $DIR/issue-43106-gating-of-stable.rs:30:5
   |
LL |     #[stable()]
   |     ^^^^^^^^^^^

error[E0658]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:36:5
   |
LL |     #[stable()]
   |     ^^^^^^^^^^^
   |
   = help: add `#![feature(staged_api)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0546]: missing 'feature'
  --> $DIR/issue-43106-gating-of-stable.rs:36:5
   |
LL |     #[stable()]
   |     ^^^^^^^^^^^

error[E0542]: missing 'since'
  --> $DIR/issue-43106-gating-of-stable.rs:36:5
   |
LL |     #[stable()]
   |     ^^^^^^^^^^^

error[E0658]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:42:5
   |
LL |     #[stable()]
   |     ^^^^^^^^^^^
   |
   = help: add `#![feature(staged_api)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0546]: missing 'feature'
  --> $DIR/issue-43106-gating-of-stable.rs:42:5
   |
LL |     #[stable()]
   |     ^^^^^^^^^^^

error[E0542]: missing 'since'
  --> $DIR/issue-43106-gating-of-stable.rs:42:5
   |
LL |     #[stable()]
   |     ^^^^^^^^^^^

error: aborting due to 21 previous errors

Some errors have detailed explanations: E0542, E0546, E0658.
For more information about an error, try `rustc --explain E0542`.
